--- a/src/stylesheets/layout.css
+++ b/src/stylesheets/layout.css
@@ -1,19 +1,122 @@
-body{
-    font-family: 'PT Root UI', Arial, Helvetica, sans-serif;
+* {
+  box-sizing: border-box;
 }
 
-h1{
-    font-weight: 700;
+html {
+  font-size: calc(1vw / 14.4);
 }
 
-h3{
-    font-weight: 500;
+body {
+  font-family: 'PT Root UI', Arial, Helvetica, sans-serif;
+  font-size: 16rem;
+  background-color: #6972ff;
 }
 
-h5{
-    font-weight: 400;
+h1 {
+  font-weight: 700;
 }
 
-p{
-    font-weight: 300;
+h3 {
+  font-weight: 500;
+}
+
+h5 {
+  font-weight: 400;
+}
+
+p {
+  font-weight: 300;
+}
+
+.zaglushka {
+  color: bisque;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+}
+
+.zaglushka h1 {
+  font-size: 60rem;
+  font-weight: 500;
+  line-height: 60rem;
+  text-transform: uppercase;
+  -webkit-text-stroke: 2rem black;
+  margin-bottom: 26rem;
+}
+
+.zaglushka p {
+  font-size: 42rem;
+  line-height: 44rem;
+  margin-bottom: 26rem;
+  -webkit-text-stroke: 2rem white;
+}
+
+.zaglushka > div {
+  width: 100%;
+}
+
+.image {
+  position: fixed;
+  z-index: -1;
+}
+
+.zaglushka img {
+  width: 100%;
+  position: relative;
+  z-index: 10;
+}
+
+.text {
+  display: flex;
+  flex-direction: column;
+  padding: 90rem 0 0 20rem;
+  position: relative;
+  z-index: 1;
+  color: white;
+}
+
+.text_wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 30rem;
+  border-radius: 30rem;
+}
+
+input[name='message'] {
+  width: 30%;
+  height: 56rem;
+  border-radius: 10rem;
+  outline: none;
+  border: 1rem solid black;
+  padding: 0 20rem;
+  color: black;
+  transition: border ease 0.3s;
+  font-size: 32rem;
+}
+
+input[name='message']:focus {
+  border: 1rem solid #eee;
+  transition: border ease 0.6s;
+}
+
+#my-form-button {
+  width: 18%;
+  height: 56rem;
+  border-radius: 10rem;
+  padding: 0 20rem;
+  outline: none;
+  background-color: #0540f2;
+  border: 1rem solid black;
+  color: white;
+  text-transform: uppercase;
+  font-size: 24rem;
+  cursor: pointer;
+}
+
+#my-form-status {
+  font-size: 20rem;
+  padding-left: 20;
 }
