--- a/src/stylesheets/layout.css
+++ b/src/stylesheets/layout.css
@@ -4,16 +4,23 @@
 
 html {
   font-size: calc(1vw / 14.4);
+  height: 100vh;
 }
 
 body {
-  font-family: 'PT Root UI', Arial, Helvetica, sans-serif;
+  font-family: 'arial narrow', Arial, Helvetica, sans-serif;
   font-size: 16rem;
-  background-color: #6972ff;
+  margin: 0;
+  height: 100vh;
+  background: radial-gradient(ellipse at center, #6872FF 0%, #6872FF 45%,#BA34FF)
 }
 
 h1 {
   font-weight: 700;
+}
+
+h2{
+  font-weight: 600;
 }
 
 h3 {
@@ -38,10 +45,17 @@ p {
 }
 
 .zaglushka h1 {
-  font-size: 60rem;
-  font-weight: 500;
+  font-size: 100rem;
+  font-weight: 400;
   line-height: 60rem;
-  text-transform: uppercase;
+  -webkit-text-stroke: 2rem black;
+  margin-bottom: 26rem;
+}
+
+.zaglushka h2 {
+  font-size: 100rem;
+  font-weight: 400;
+  line-height: 60rem;
   -webkit-text-stroke: 2rem black;
   margin-bottom: 26rem;
 }
@@ -50,30 +64,33 @@ p {
   font-size: 42rem;
   line-height: 44rem;
   margin-bottom: 26rem;
-  -webkit-text-stroke: 2rem white;
+  font-weight: 400;
 }
 
 .zaglushka > div {
-  width: 90%;
+  width: 100%;
 }
 
 .zaglushka img {
-  width: 100%;
-  position: relative;
-  z-index: 10;
+  width: 48%;
 }
 
 .image {
   position: relative;
-  z-index: 10;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: -1;
 }
 
 .text {
   display: flex;
   flex-direction: column;
-  padding: 90rem 0 0 20rem;
-  position: relative;
-  z-index: 1;
+  padding: 100rem 0 0 30rem;
+  position: absolute;
+  z-index: 100.0;
   color: white;
 }
 
@@ -86,37 +103,71 @@ p {
 }
 
 input[name='message'] {
-  width: 30%;
+  width: 33%;
+  font-family: 'arial narrow', Arial, Helvetica, sans-serif;
+  font-weight: 400;
   height: 56rem;
   border-radius: 10rem;
   outline: none;
   border: 1rem solid black;
-  padding: 0 20rem;
+  padding: 0 20rem 4rem;
   color: black;
   transition: border ease 0.3s;
-  font-size: 32rem;
-}
-
-input[name='message']:focus {
-  border: 1rem solid #eee;
-  transition: border ease 0.6s;
+  font-size: 35rem;
 }
 
 #my-form-button {
-  width: 18%;
+  width: 15%;
   height: 56rem;
   border-radius: 10rem;
-  padding: 0 20rem;
+  padding: 0 20rem 4rem;
   outline: none;
   background-color: #0540f2;
   border: 1rem solid black;
   color: white;
-  text-transform: uppercase;
-  font-size: 24rem;
+  font-size: 35rem;
   cursor: pointer;
+  font-family: 'arial narrow', Arial, Helvetica, sans-serif;
 }
 
 #my-form-status {
-  font-size: 20rem;
+  font-size: 30rem;
   padding-left: 20;
+}
+
+.clouds{
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  z-index: -1;
+}
+
+.cloud-1{
+  position: absolute;
+  width: 50%;
+  bottom: 80%;
+  right: 80%;
+  transform: rotate(180deg);
+}
+
+.cloud-2{
+  position: absolute;
+  width: 50%;
+  bottom: 85%;
+  left: 65%;
+}
+
+.cloud-3{
+  position: absolute;
+  width: 50%;
+  top: 70%;
+  left: 60%;
+}
+
+.cloud-4{
+  position: absolute;
+  width: 50%;
+  top: 75%;
+  right: 70%;
+  transform: rotate(180deg);
 }
