--- a/src/stylesheets/layout.css
+++ b/src/stylesheets/layout.css
@@ -67,10 +67,6 @@ p {
   font-weight: 400;
 }
 
-.zaglushka > div {
-  width: 100%;
-}
-
 .zaglushka img {
   width: 48%;
 }
@@ -86,6 +82,7 @@ p {
 }
 
 .text {
+  width: 100%;
   display: flex;
   flex-direction: column;
   padding: 100rem 0 0 30rem;
@@ -170,4 +167,32 @@ input[name='message'] {
   top: 75%;
   right: 70%;
   transform: rotate(180deg);
+}
+
+.socials{
+  position: absolute;
+  width: auto;
+  height: auto;
+  align-items: center;
+  left: 65rem;
+  top: 435rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  margin: 0 auto;
+
+}
+
+.socials a{
+  position: relative;
+  display: block;
+  align-items: center;
+  justify-content: center;
+  height: auto;
+  width: 80rem;
+}
+
+.socials a img{
+  width: 80%;
 }
