--- a/docs/index.css
+++ b/docs/index.css
@@ -1,1 +1,271 @@
-a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{border:0;font-size:100%;font:inherit;margin:0;padding:0;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:"";content:none}table{border-collapse:collapse;border-spacing:0}@font-face{font-family:PT Root UI;font-weight:700;src:url(fonts/b8d6a9be4d768f44efff.ttf)}@font-face{font-family:PT Root UI;font-weight:500;src:url(fonts/8d709aad86fd9dbe87b7.ttf)}@font-face{font-family:PT Root UI;font-weight:400;src:url(fonts/f296eb48106b91e8651a.ttf)}@font-face{font-family:PT Root UI;font-weight:300;src:url(fonts/77d09f7d81dec8d0dc61.ttf)}*{box-sizing:border-box}html{font-size:.06944vw}body{background-color:#6972ff;font-family:PT Root UI,Arial,Helvetica,sans-serif;font-size:16rem}h1{font-weight:700}h3{font-weight:500}h5{font-weight:400}p{font-weight:300}.zaglushka{color:bisque;display:flex;height:100vh;justify-content:space-between;position:fixed;width:100%}.zaglushka h1{font-size:60rem;font-weight:500;line-height:60rem;text-transform:uppercase;-webkit-text-stroke:2rem #000;margin-bottom:26rem}.zaglushka p{font-size:42rem;line-height:44rem;margin-bottom:26rem;-webkit-text-stroke:2rem #fff}.zaglushka>div{width:90%}.zaglushka img{width:100%}.image,.zaglushka img{position:relative;z-index:10}.text{color:#fff;padding:90rem 0 0 20rem;position:relative;z-index:1}.text,.text_wrapper{display:flex;flex-direction:column}.text_wrapper{border-radius:30rem;justify-content:center;padding:30rem}input[name=message]{border:1rem solid #000;border-radius:10rem;color:#000;font-size:32rem;height:56rem;outline:none;padding:0 20rem;transition:border .3s ease;width:30%}input[name=message]:focus{border:1rem solid #eee;transition:border .6s ease}#my-form-button{background-color:#0540f2;border:1rem solid #000;border-radius:10rem;color:#fff;cursor:pointer;font-size:24rem;height:56rem;outline:none;padding:0 20rem;text-transform:uppercase;width:18%}#my-form-status{font-size:20rem;padding-left:20}
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+@font-face {
+    font-family: 'arial narrow';
+    src: url(fonts/f955bf9c1916545f4f8e.ttf);
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: 'arial narrow italic';
+    src: url(fonts/c599e2aafc499a21372d.ttf);
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: 'arial narrow';
+    src: url(fonts/4cad86aa05f7286be068.ttf);
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: 'arial narrow italic';
+    src: url(fonts/465dc0649679f65097f5.ttf);
+    font-weight: 400;
+}
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: calc(1vw / 14.4);
+  height: 100vh;
+}
+
+body {
+  font-family: 'arial narrow', Arial, Helvetica, sans-serif;
+  font-size: 16rem;
+  margin: 0;
+  height: 100vh;
+  background: radial-gradient(ellipse at center, #6872FF 0%, #6872FF 45%,#BA34FF)
+}
+
+h1 {
+  font-weight: 700;
+}
+
+h2{
+  font-weight: 600;
+}
+
+h3 {
+  font-weight: 500;
+}
+
+h5 {
+  font-weight: 400;
+}
+
+p {
+  font-weight: 300;
+}
+
+.zaglushka {
+  color: bisque;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+}
+
+.zaglushka h1 {
+  font-size: 100rem;
+  font-weight: 400;
+  line-height: 60rem;
+  -webkit-text-stroke: 2rem black;
+  margin-bottom: 26rem;
+}
+
+.zaglushka h2 {
+  font-size: 100rem;
+  font-weight: 400;
+  line-height: 60rem;
+  -webkit-text-stroke: 2rem black;
+  margin-bottom: 26rem;
+}
+
+.zaglushka p {
+  font-size: 42rem;
+  line-height: 44rem;
+  margin-bottom: 26rem;
+  font-weight: 400;
+}
+
+.zaglushka img {
+  width: 48%;
+}
+
+.image {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: -1;
+}
+
+.text {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 100rem 0 0 30rem;
+  position: absolute;
+  z-index: 100.0;
+  color: white;
+}
+
+.text_wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 30rem;
+  border-radius: 30rem;
+}
+
+input[name='message'] {
+  width: 33%;
+  font-family: 'arial narrow', Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  height: 56rem;
+  border-radius: 10rem;
+  outline: none;
+  border: 1rem solid black;
+  padding: 0 20rem 4rem;
+  color: black;
+  transition: border ease 0.3s;
+  font-size: 35rem;
+}
+
+#my-form-button {
+  width: 15%;
+  height: 56rem;
+  border-radius: 10rem;
+  padding: 0 20rem 4rem;
+  outline: none;
+  background-color: #0540f2;
+  border: 1rem solid black;
+  color: white;
+  font-size: 35rem;
+  cursor: pointer;
+  font-family: 'arial narrow', Arial, Helvetica, sans-serif;
+}
+
+#my-form-status {
+  font-size: 30rem;
+  padding-left: 20;
+}
+
+.clouds{
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  z-index: -1;
+}
+
+.cloud-1{
+  position: absolute;
+  width: 50%;
+  bottom: 80%;
+  right: 80%;
+  transform: rotate(180deg);
+}
+
+.cloud-2{
+  position: absolute;
+  width: 50%;
+  bottom: 85%;
+  left: 65%;
+}
+
+.cloud-3{
+  position: absolute;
+  width: 50%;
+  top: 70%;
+  left: 60%;
+}
+
+.cloud-4{
+  position: absolute;
+  width: 50%;
+  top: 75%;
+  right: 70%;
+  transform: rotate(180deg);
+}
+
+.socials{
+  position: absolute;
+  width: auto;
+  height: auto;
+  align-items: center;
+  left: 65rem;
+  top: 435rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  margin: 0 auto;
+
+}
+
+.socials a{
+  position: relative;
+  display: block;
+  align-items: center;
+  justify-content: center;
+  height: auto;
+  width: 80rem;
+}
+
+.socials a img{
+  width: 80%;
+}
+
+
