--- a/docs/index.css
+++ b/docs/index.css
@@ -83,14 +83,19 @@ body {
   font-size: 16rem;
   margin: 0;
   height: 100vh;
-  background: radial-gradient(ellipse at center, #6872FF 0%, #6872FF 45%,#BA34FF)
+  background: radial-gradient(
+    ellipse at center,
+    #6872ff 0%,
+    #6872ff 45%,
+    #ba34ff
+  );
 }
 
 h1 {
   font-weight: 700;
 }
 
-h2{
+h2 {
   font-weight: 600;
 }
 
@@ -131,10 +136,11 @@ p {
   margin-bottom: 26rem;
 }
 
-.zaglushka p {
+.zaglushka h3 {
   font-size: 42rem;
   line-height: 44rem;
   margin-bottom: 26rem;
+  -webkit-text-stroke: none;
   font-weight: 400;
 }
 
@@ -158,7 +164,7 @@ p {
   flex-direction: column;
   padding: 100rem 0 0 30rem;
   position: absolute;
-  z-index: 100.0;
+  z-index: 100;
   color: white;
 }
 
@@ -178,6 +184,7 @@ input[name='message'] {
   border-radius: 10rem;
   outline: none;
   border: 1rem solid black;
+  -webkit-text-stroke: none;
   padding: 0 20rem 4rem;
   color: black;
   transition: border ease 0.3s;
@@ -192,6 +199,7 @@ input[name='message'] {
   outline: none;
   background-color: #0540f2;
   border: 1rem solid black;
+  -webkit-text-stroke: none;
   color: white;
   font-size: 35rem;
   cursor: pointer;
@@ -203,14 +211,14 @@ input[name='message'] {
   padding-left: 20;
 }
 
-.clouds{
+.clouds {
   width: 100vw;
   height: 100vh;
   position: absolute;
   z-index: -1;
 }
 
-.cloud-1{
+.cloud-1 {
   position: absolute;
   width: 50%;
   bottom: 80%;
@@ -218,21 +226,21 @@ input[name='message'] {
   transform: rotate(180deg);
 }
 
-.cloud-2{
+.cloud-2 {
   position: absolute;
   width: 50%;
   bottom: 85%;
   left: 65%;
 }
 
-.cloud-3{
+.cloud-3 {
   position: absolute;
   width: 50%;
   top: 70%;
   left: 60%;
 }
 
-.cloud-4{
+.cloud-4 {
   position: absolute;
   width: 50%;
   top: 75%;
@@ -240,31 +248,38 @@ input[name='message'] {
   transform: rotate(180deg);
 }
 
-.socials{
+.socials {
   position: absolute;
   width: auto;
   height: auto;
   align-items: center;
   left: 65rem;
-  top: 435rem;
+  top: 445rem;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 1rem;
   margin: 0 auto;
-
 }
 
-.socials a{
+.socials a {
   position: relative;
   display: block;
   align-items: center;
   justify-content: center;
-  height: auto;
-  width: 80rem;
+  height: 80rem;
+  width: auto;
 }
 
-.socials a img{
+.vk {
+  height: 40rem;
+}
+
+.tgg {
+  margin-left: 4.5rem;
+}
+
+.socials a img {
   width: 80%;
 }
 
