--- a/src/stylesheets/adaptive.css
+++ b/src/stylesheets/adaptive.css
@@ -1,29 +1,201 @@
 @media screen and (max-width: 600px) {
   html {
-    font-size: calc(1vw / 3.9);
+    font-size: calc(0.35vw / 3.9);
+  }
+  body {
+    background: radial-gradient(
+      ellipse at center,
+      #6872ff 0%,
+      #6872ff 5%,
+      #ba34ff
+    );
   }
   .zaglushka {
-    flex-direction: column-reverse;
+    flex-direction: column;
   }
-  .zaglushka > div {
-    width: 100%;
+
+  .zaglushka h3 {
+    font-size: 50rem;
+    padding-right: 240rem;
   }
   .text {
+    margin-top: 420rem;
     padding: 20rem;
   }
+
   .zaglushka img {
-    width: 60%;
-    margin: 0 auto;
-    display: block;
+    width: 100%;
   }
+
   form {
     display: flex;
     flex-direction: column;
-    gap: 20rem;
+    gap: 40rem;
   }
-  input[name='message'],
-  #my-form-button {
+  input[name='message'] {
     width: 100%;
-    font-size: 20rem;
+    height: 70rem;
+    font-size: 36rem;
+    margin-top: 1190rem;
+  }
+  #my-form-button {
+    width: 30%;
+    height: 70rem;
+    font-size: 36rem;
+  }
+  .clouds {
+    width: 140vw;
+    height: 100vh;
+    position: absolute;
+    z-index: -1;
+    filter: blur(10rem);
+  }
+  .cloud-1 {
+    width: 80%;
+    bottom: 80%;
+    right: 60%;
+  }
+  .cloud-2 {
+    width: 80%;
+    bottom: 80%;
+    left: 40%;
+    rotate: 15deg;
+  }
+  .cloud-3 {
+    width: 80%;
+    top: 78%;
+    left: 35%;
+  }
+
+  .cloud-4 {
+    width: 80%;
+    top: 80%;
+    right: 65%;
+    transform: rotate(180deg);
+  }
+  .socials {
+    left: 60rem;
+    top: 2180rem;
+    gap: 5rem;
+    margin: 100rem auto;
+  }
+
+  .vk {
+    height: 80rem;
+  }
+
+  .tgg {
+    margin-left: 4.5rem;
+    height: 80rem;
+  }
+
+  .inst {
+    height: 86rem;
+    padding-bottom: 4rem;
+  }
+
+  .socials a img {
+    width: 80%;
+  }
+}
+
+@media screen and (min-width: 601px) and (max-width: 1024px) {
+  html {
+    font-size: calc(0.35vw / 3.9);
+  }
+  body {
+    background: radial-gradient(
+      ellipse at center,
+      #6872ff 0%,
+      #6872ff 5%,
+      #ba34ff
+    );
+  }
+  .zaglushka {
+    flex-direction: column;
+  }
+
+  .zaglushka h3 {
+    font-size: 50rem;
+    padding-right: 240rem;
+  }
+  .text {
+    margin-top: 100rem;
+    padding: 20rem;
+  }
+
+  .zaglushka img {
+    width: 90%;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 30rem;
+  }
+  input[name='message'] {
+    width: 100%;
+    height: 70rem;
+    font-size: 36rem;
+    margin-top: 690rem;
+  }
+  #my-form-button {
+    width: 30%;
+    height: 70rem;
+    font-size: 36rem;
+  }
+  .clouds {
+    width: 140vw;
+    height: 100vh;
+    position: absolute;
+    z-index: -1;
+    filter: blur(10rem);
+  }
+  .cloud-1 {
+    width: 80%;
+    bottom: 75%;
+    right: 60%;
+  }
+  .cloud-2 {
+    width: 80%;
+    bottom: 70%;
+    left: 40%;
+    rotate: 15deg;
+  }
+  .cloud-3 {
+    width: 80%;
+    top: 70%;
+    left: 35%;
+  }
+
+  .cloud-4 {
+    width: 80%;
+    top: 75%;
+    right: 65%;
+    transform: rotate(180deg);
+  }
+  .socials {
+    left: 60rem;
+    top: 1230rem;
+    gap: 5rem;
+    margin: 100rem auto;
+  }
+
+  .vk {
+    height: 80rem;
+  }
+
+  .tgg {
+    margin-left: 4.5rem;
+    height: 80rem;
+  }
+
+  .inst {
+    height: 86rem;
+    padding-bottom: 4rem;
+  }
+
+  .socials a img {
+    width: 80%;
   }
 }
