--- a/docs/index.css
+++ b/docs/index.css
@@ -82,7 +82,7 @@ body {
   font-family: 'arial narrow', Arial, Helvetica, sans-serif;
   font-size: 16rem;
   margin: 0;
-  height: 100vh;
+  /* height: 100vh; */
   background: radial-gradient(
     ellipse at center,
     #6872ff 0%,
@@ -252,7 +252,6 @@ input[name='message'] {
   position: absolute;
   width: auto;
   height: auto;
-  align-items: center;
   left: 65rem;
   top: 445rem;
   display: flex;
@@ -302,6 +301,63 @@ a {
 }
 
 /* about media  */
+.main {
+  width: 100%;
+  height: 3096px;
+  background-image: url(images/4e0471131f52a3195ab5.svg);
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-size: cover;
+}
+.main-text h1 {
+  color: white;
+  display: flex;
+  justify-content: center;
+  font-size: 350rem;
+  font-weight: 150;
+}
+.main-info h3 {
+  color: white;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  font-size: 38rem;
+  line-height: 50rem;
+  text-align: center;
+  margin: 0 100rem;
+  top: 110vh;
+}
+
+.dolphin {
+  display: flex;
+  width: 100%;
+  height: 700rem;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 180rem;
+}
+.main-menu {
+  width: 90%;
+  text-align: center;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+.main-menu li {
+  display: inline-block;
+}
+
+.main-menu a {
+  position: relative;
+  font-size: 40rem;
+  display: inline-block;
+  font-style: italic;
+}
+.art1 {
+  display: none;
+}
 
 @media screen and (max-width: 600px) {
   html {
