--- a/src/stylesheets/layout.css
+++ b/src/stylesheets/layout.css
@@ -11,13 +11,13 @@ body {
   font-family: 'arial narrow', Arial, Helvetica, sans-serif;
   font-size: 16rem;
   margin: 0;
-  /* height: 100vh; */
   background: radial-gradient(
     ellipse at center,
     #6872ff 0%,
     #6872ff 45%,
     #ba34ff
   );
+  overflow-x: hidden;
 }
 
 h1 {
@@ -187,7 +187,6 @@ input[name='message'] {
   align-items: center;
   justify-content: center;
   gap: 1rem;
-  /* margin: 0 auto; */
   margin-left: 18rem;
 }
 
@@ -286,4 +285,41 @@ a {
 }
 .art1 {
   display: none;
+}
+.items {
+  display: block;
+  margin: 0 auto;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
+.articles-pl,
+.articles-png {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 130%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  top: 1100rem;
+  max-width: none;
+}
+.about-pl,
+.about-png {
+  width: 40vw;
+  height: auto;
+  position: absolute;
+  top: 1320rem;
+  right: 62%;
+  /* transform: translate(-130%, -50%); */
+}
+.archive-pl,
+.archive-png {
+  width: 93vw;
+  position: absolute;
+  top: 1135rem;
+  left: 22%;
+  /* transform: translateY(-50%); */
+  height: auto;
 }
