--- a/src/stylesheets/layout.css
+++ b/src/stylesheets/layout.css
@@ -219,6 +219,7 @@ input[name='message'] {
 
 a {
   position: absolute;
+  cursor: pointer;
   top: 20rem;
   right: 20rem;
   z-index: 100;
@@ -294,17 +295,19 @@ a {
   height: 100vh;
 }
 
-a {
-  display: contents;
-}
-.articles1 {
-  display: flex;
+.articles1-link {
   position: absolute;
-  width: 14%;
-  height: auto;
   top: 1000rem;
   left: 10%;
+  width: 14%;
   z-index: 100;
+  display: block;
+}
+
+.articles1-link img {
+  width: 100%;
+  height: auto;
+  display: block;
 }
 
 .articles2 {
@@ -492,4 +495,15 @@ a {
   top: 2930rem;
   line-height: 50rem;
   z-index: 100;
+}
+
+/* article1  */
+.article1 {
+  position: relative;
+  width: 100%;
+  height: 3560px;
+  background-color: #00ff00;
+}
+.art-image {
+  width: 10%;
 }
