--- a/docs/index.css
+++ b/docs/index.css
@@ -294,7 +294,8 @@ a {
   top: 20rem;
   right: 20rem;
   z-index: 100;
-  font-size: 30rem;
+  font-size: 40rem;
+  font-style: italic;
   text-decoration: none;
   color: white;
   cursor: pointer;
@@ -351,8 +352,8 @@ a {
 
 .main-menu a {
   position: relative;
-  font-size: 40rem;
   display: inline-block;
+  font-size: 40rem;
   font-style: italic;
 }
 .art1 {
@@ -673,13 +674,13 @@ a {
   }
   input[name='message'] {
     width: 100%;
-    height: 70rem;
+    height: 80rem;
     font-size: 36rem;
     margin-top: 700rem;
   }
   #my-form-button {
-    width: 30%;
-    height: 70rem;
+    width: 35%;
+    height: 80rem;
     font-size: 36rem;
   }
   .clouds {
@@ -713,7 +714,7 @@ a {
     transform: rotate(180deg);
   }
   .socials {
-    left: 60rem;
+    left: 80rem;
     top: 1560rem;
     gap: 5rem;
     margin: 100rem auto;
@@ -736,6 +737,42 @@ a {
   .socials a img {
     width: 80%;
   }
+}
+
+a {
+  font-size: 60rem;
+}
+.main {
+  height: 1440px;
+}
+.main-text h1 {
+  font-size: 450rem;
+  font-weight: 150;
+}
+.main-info h3 {
+  font-size: 50rem;
+  line-height: 55rem;
+  top: 1000rem;
+}
+
+.dolphin {
+  width: 100%;
+  height: 700rem;
+  top: 300rem;
+}
+
+.main-menu a {
+  font-size: 60rem;
+}
+.articles2,
+.articles1-link,
+.articles3,
+.articles4 {
+  top: 1225rem;
+}
+.articles-pl,
+.articles-png {
+  top: 1300rem;
 }
 
 @media screen and (min-width: 601px) and (max-width: 1024px) {
@@ -764,7 +801,7 @@ a {
   }
 
   .zaglushka img {
-    width: 90%;
+    width: 80%;
   }
 
   form {
@@ -774,13 +811,13 @@ a {
   }
   input[name='message'] {
     width: 100%;
-    height: 70rem;
+    height: 75rem;
     font-size: 36rem;
-    margin-top: 690rem;
+    margin-top: 450rem;
   }
   #my-form-button {
     width: 30%;
-    height: 70rem;
+    height: 75rem;
     font-size: 36rem;
   }
   .clouds {
@@ -814,8 +851,8 @@ a {
     transform: rotate(180deg);
   }
   .socials {
-    left: 60rem;
-    top: 1230rem;
+    left: 70rem;
+    top: 1000rem;
     gap: 5rem;
     margin: 100rem auto;
   }
@@ -837,6 +874,12 @@ a {
   .socials a img {
     width: 80%;
   }
+}
+a {
+  font-size: 50rem;
+}
+.main {
+  height: 2048px;
 }
 
 
