--- a/src/stylesheets/layout.css
+++ b/src/stylesheets/layout.css
@@ -269,6 +269,7 @@ a {
 .main-menu {
   width: 90%;
   text-align: center;
+  cursor: default;
   align-items: center;
   display: flex;
   justify-content: space-between;
