--- a/docs/index.css
+++ b/docs/index.css
@@ -340,6 +340,7 @@ a {
 .main-menu {
   width: 90%;
   text-align: center;
+  cursor: default;
   align-items: center;
   display: flex;
   justify-content: space-between;
@@ -741,6 +742,7 @@ a {
   }
   .main {
     height: 1440px;
+    overflow-x: hidden;
   }
   .main-text h1 {
     font-size: 450rem;
