--- a/src/stylesheets/adaptive.css
+++ b/src/stylesheets/adaptive.css
@@ -101,10 +101,9 @@
     font-size: 60rem;
   }
   .main {
-    background-size: cover;
-    background-position: center;
-    overflow-x: hidden;
-    height: 150vh;
+    width: 100%;
+    height: 1400px;
+    background-repeat: repeat-x;
   }
   .main-text h1 {
     font-size: 450rem;
