--- a/src/stylesheets/adaptive.css
+++ b/src/stylesheets/adaptive.css
@@ -190,6 +190,45 @@
   .main-info h4 {
     display: none;
   }
+  /* article1  */
+  .article1 {
+    width: 100%;
+    height: 2900px;
+  }
+
+  .art1-simp,
+  .art1-simple {
+    top: 3100rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    position: absolute;
+    width: 130%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: none;
+  }
+  .simple-desktop {
+    display: none;
+  }
+  .my-world {
+    top: 250rem;
+  }
+  .ok {
+    top: 2000rem;
+  }
+  .vk1 {
+    top: 3750rem;
+  }
+  .art-info h3 {
+    width: 48%;
+    text-align: justify;
+    font-size: 39rem;
+    line-height: 54rem;
+    top: 300rem;
+    margin: 0 110rem;
+  }
 }
 
 @media screen and (min-width: 601px) and (max-width: 1024px) {
