--- a/src/stylesheets/adaptive.css
+++ b/src/stylesheets/adaptive.css
@@ -102,8 +102,10 @@
   }
   .main {
     width: 100%;
-    height: 1400px;
-    background-repeat: repeat-x;
+    height: 1500px;
+    background-image: url(../images/main-mobile.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
   }
   .main-text h1 {
     font-size: 450rem;
@@ -193,7 +195,7 @@
   /* article1  */
   .article1 {
     width: 100%;
-    height: 2900px;
+    height: 2200px;
   }
 
   .art1-simp,
