--- a/src/stylesheets/layout.css
+++ b/src/stylesheets/layout.css
@@ -237,6 +237,7 @@ a {
   background-image: url(../images/main-bg.svg);
   background-repeat: no-repeat;
   background-size: cover;
+  overflow-x: hidden;
 }
 .main-text h1 {
   color: white;
