--- a/docs/index.css
+++ b/docs/index.css
@@ -308,6 +308,7 @@ a {
   background-image: url(images/4e0471131f52a3195ab5.svg);
   background-repeat: no-repeat;
   background-size: cover;
+  overflow-x: hidden;
 }
 .main-text h1 {
   color: white;
@@ -745,7 +746,7 @@ a {
   }
   .main {
     width: 100%;
-    height: 1500px;
+    height: 1300px;
     background-image: url(images/90a6d0e1f66a9dbb64a3.svg);
     background-repeat: no-repeat;
     background-size: cover;
