--- a/src/stylesheets/layout.css
+++ b/src/stylesheets/layout.css
@@ -434,8 +434,9 @@ a {
   width: 100%;
   left: 50%;
   transform: translate(-50%, -50%);
-  top: 2530rem;
+  /* top: 2530rem; */
   max-width: none;
+  bottom: 0;
 }
 .main-logo {
   position: absolute;
