--- a/src/stylesheets/adaptive.css
+++ b/src/stylesheets/adaptive.css
@@ -102,10 +102,11 @@
   }
   .main {
     width: 100%;
-    height: 1300px;
+    height: 1390px;
     background-image: url(../images/main-mobile.svg);
     background-repeat: no-repeat;
     background-size: cover;
+    overflow-x: hidden;
   }
   .main-text h1 {
     font-size: 450rem;
@@ -165,8 +166,24 @@
   .interactive-png {
     top: 2235rem;
   }
+  .main-footer {
+    display: none;
+  }
+  .mobile-footer {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    z-index: 100;
+  }
+
   .main-socials {
     top: 3250rem;
+    left: 70%;
   }
 
   .main-socials a {
