--- a/docs/index.css
+++ b/docs/index.css
@@ -308,7 +308,6 @@ a {
   background-image: url(images/4e0471131f52a3195ab5.svg);
   background-repeat: no-repeat;
   background-size: cover;
-  overflow-x: hidden;
 }
 .main-text h1 {
   color: white;
@@ -505,9 +504,11 @@ a {
   width: 100%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* top: 2530rem; */
+  top: 2530rem;
   max-width: none;
-  bottom: 0;
+}
+.mobile-footer {
+  display: none;
 }
 .main-logo {
   position: absolute;
@@ -747,10 +748,11 @@ a {
   }
   .main {
     width: 100%;
-    height: 1300px;
+    height: 1390px;
     background-image: url(images/90a6d0e1f66a9dbb64a3.svg);
     background-repeat: no-repeat;
     background-size: cover;
+    overflow-x: hidden;
   }
   .main-text h1 {
     font-size: 450rem;
@@ -810,8 +812,24 @@ a {
   .interactive-png {
     top: 2235rem;
   }
+  .main-footer {
+    display: none;
+  }
+  .mobile-footer {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    z-index: 100;
+  }
+
   .main-socials {
     top: 3250rem;
+    left: 70%;
   }
 
   .main-socials a {
