--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -2,3 +2,9 @@
 @import 'fonts.css';
 @import 'layout.css';
 @import 'adaptive.css';
+@import 'tests.css';
+@import 'interact.css';
+@import 'games.css';
+@import 'articles.css';
+@import 'archive.css';
+@import 'aboutUs.css';
