--- a/src/stylesheets/layout.css
+++ b/src/stylesheets/layout.css
@@ -218,13 +218,13 @@ input[name='message'] {
 }
 
 a {
-  /* position: absolute;
+  position: absolute;
   cursor: pointer;
   top: 20rem;
   right: 20rem;
   z-index: 100;
   font-size: 40rem;
-  font-style: italic; */
+  font-style: italic;
   text-decoration: none;
   color: white;
 }
