--- a/docs/index.css
+++ b/docs/index.css
@@ -3,71 +3,152 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 @font-face {
-    font-family: 'arial narrow';
-    src: url(fonts/f955bf9c1916545f4f8e.ttf);
-    font-weight: 700;
-}
-
-@font-face {
-    font-family: 'arial narrow italic';
-    src: url(fonts/c599e2aafc499a21372d.ttf);
-    font-weight: 700;
+  font-family: 'arial narrow';
+  src: url(fonts/f955bf9c1916545f4f8e.ttf);
+  font-weight: 700;
 }
 
 @font-face {
-    font-family: 'arial narrow';
-    src: url(fonts/4cad86aa05f7286be068.ttf);
-    font-weight: 400;
+  font-family: 'arial narrow italic';
+  src: url(fonts/c599e2aafc499a21372d.ttf);
+  font-weight: 700;
 }
 
 @font-face {
-    font-family: 'arial narrow italic';
-    src: url(fonts/465dc0649679f65097f5.ttf);
-    font-weight: 400;
+  font-family: 'arial narrow';
+  src: url(fonts/4cad86aa05f7286be068.ttf);
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'arial narrow italic';
+  src: url(fonts/465dc0649679f65097f5.ttf);
+  font-weight: 400;
 }
 * {
   box-sizing: border-box;
@@ -207,7 +288,6 @@ main {
 
 .screen-1 h1 {
   position: absolute;
-<<<<<<< HEAD
   z-index: 100;
   color: white;
 }
@@ -369,17 +449,6 @@ a {
   text-align: center;
   margin: 0 100rem;
   top: 900rem;
-=======
-  font-size: 100px;
-  color: #0037ff;
-  text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.7);
-  left: 50%;
-  top: 10%;
-  transform: translateX(-50%);
-  z-index: 3;
-  font-weight: bold;
-  letter-spacing: 5px;
->>>>>>> main
 }
 
 .dolphin {
@@ -1219,12 +1288,10 @@ form button:hover {
   }
 }
 
-
 .int-links a {
   position: static;
   font-size: small;
 }
-
 
 .art-links a {
   position: static;
@@ -1235,6 +1302,3 @@ form button:hover {
   position: static;
   font-size: small;
 }
-
-
-
