--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -1,9 +1,19 @@
 @import 'reset.css';
 @import 'fonts.css';
-@import 'layout.css';
+@import 'basic.css';
+
+/* @import 'layout.css';
 @import 'adaptive.css';
 @import 'tests.css';
 @import 'interact.css';
 @import 'games.css';
 @import 'articles.css';
-@import 'archive.css';
+@import 'archive.css'; */
+
+@import 'components/01_qarks.css';
+@import 'components/02_atoms.css';
+@import 'components/03_molecules.css';
+@import 'components/04_collections.css';
+@import 'components/05_wrappers.css';
+@import 'components/06_organisms.css';
+@import 'components/07_superorganisms.css';
